ecs.tf
# ecs.tf

resource "aws_ecs_cluster" "main" {
  name = "myapp-cluster"
}

data "template_file" "myapp" {
  template = file("${path.module}/files/containers_task.json.tpl")

  vars = {
    app_image                    = var.app_image
    app_port                     = var.app_port
    fargate_cpu                  = var.fargate_cpu
    fargate_memory               = var.fargate_memory
    aws_region                   = var.aws_region
    site_url                     = aws_alb.main.dns_name
    prometheus_config            = "${base64encode(data.template_file.prometheus_config.rendered)}"
    grafana_datasource_config    = "${base64encode(data.template_file.grafana_datasource_config.rendered)}"
    grafana_dashboards_config    = "${base64encode(data.template_file.grafana_dashboards_config.rendered)}"
    grafana_monitor_web_dash     = "${base64encode(data.template_file.grafana_monitor_web_dash.rendered)}"
    blackbox_config              = "${base64encode(data.template_file.blackbox_config.rendered)}"
  }
}

resource "aws_ecs_task_definition" "app" {
  family                   = "myapp-task"
  execution_role_arn       = aws_iam_role.ecs_task_execution_role.arn
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu                      = var.fargate_cpu
  memory                   = var.fargate_memory
  container_definitions    = data.template_file.myapp.rendered

  volume {
    name      = "config"

    efs_volume_configuration {
      file_system_id = aws_efs_file_system.efs_datastore.id
    }
  }

  volume {
    name      = "prometheus-data"

    efs_volume_configuration {
      file_system_id = aws_efs_file_system.efs_datastore.id
    }
  }

  volume {
    name      = "grafana-data"

    efs_volume_configuration {
      file_system_id = aws_efs_file_system.efs_datastore.id
    }
  }

}

resource "aws_ecs_service" "main" {
  name            = "myapp-service"
  cluster         = aws_ecs_cluster.main.id
  task_definition = aws_ecs_task_definition.app.arn
  desired_count   = var.app_count
  launch_type     = "FARGATE"

  network_configuration {
    security_groups  = [aws_security_group.ecs_tasks.id]
    subnets          = aws_subnet.private.*.id
    assign_public_ip = true
  }

  load_balancer {
    target_group_arn = aws_alb_target_group.app.id
    container_name   = "myapp"
    container_port   = var.app_port
  }

  load_balancer {
    target_group_arn = aws_alb_target_group.grafana.id
    container_name   = "grafana"
    container_port   = 3000
  }

  load_balancer {
    target_group_arn = aws_alb_target_group.prometheus.id
    container_name   = "prometheus"
    container_port   = 9090
  }

  depends_on = [aws_alb_listener.front_end, aws_iam_role_policy_attachment.ecs_task_execution_role]
}
